# m

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  install_devtools.sh
.github/workflows/: pages-deploy.yml  tests.yml
bugi/bugi-core/src/: lib.rs
bugi/bugi-host/src/: lib.rs
bugi/bugi-share/src/: lib.rs
bugi/bugi-tests/: Cargo.toml
bugi/bugi-tests/src/: lib.rs  wasm.rs
bugi/bugi-tests/wasm-plug/: Cargo.toml
bugi/bugi-tests/wasm-plug/src/: lib.rs  main.rs
bugi/bugi-wasm/: Cargo.toml  spec-v0.md
bugi/bugi-wasm-pdk/: Cargo.toml
bugi/bugi-wasm-pdk-macro/: Cargo.toml
bugi/bugi-wasm-pdk-macro/src/: lib.rs
bugi/bugi-wasm-pdk-macro2/: Cargo.toml
bugi/bugi-wasm-pdk-macro2/src/: export_m.rs  lib.rs  plugin_id_m.rs
bugi/bugi-wasm-pdk/src/: lib.rs
bugi/bugi-wasm/src/: lib.rs
bugi/bugi/src/: lib.rs  override.rs  plugin.rs
bugi/crate/bugi/: Cargo.toml
bugi/crate/bugi-core/src/: lib.rs
bugi/crate/bugi-host/src/: lib.rs
bugi/crate/bugi-share/: Cargo.toml
bugi/crate/bugi-tests/src/: lib.rs
bugi/crate/bugi-wasm/: Cargo.toml  spec-v0.md
bugi/crate/bugi-wasm/src/: lib.rs
bugi/crate/bugi/src/: cacher.rs  lib.rs  override.rs  plugin.rs
bugi/crates/bugi/: Cargo.toml
bugi/crates/bugi-cli/: Cargo.toml
bugi/crates/bugi-cli/src/: main.rs
bugi/crates/bugi-core/: Cargo.toml
bugi/crates/bugi-host/: Cargo.toml
bugi/crates/bugi-host/src/: lib.rs
bugi/crates/bugi-macro/: Cargo.toml
bugi/crates/bugi-macro/src/: parse_export.rs
bugi/crates/bugi-pdk/: Cargo.toml
bugi/crates/bugi-pdk-derive/: Cargo.toml
bugi/crates/bugi-pdk-derive/src/: lib.rs
bugi/crates/bugi-pdk/src/: lib.rs  mem.rs
bugi/crates/bugi-sdk/: Cargo.toml
bugi/crates/bugi-sdk/src/: cacher.rs  hostfunc.rs  lib.rs  module.rs  param.rs  universe.rs
bugi/crates/bugi-share/src/: lib.rs
bugi/crates/bugi-tests/: Cargo.toml
bugi/crates/bugi-tests/src/: lib.rs
bugi/crates/bugi/src/: cacher.rs  lib.rs  plugin.rs
bugi/crates/bugi_macro/: Cargo.toml
bugi/crates/bugi_macro/src/: lib.rs  parse_export.rs
bugi/crates/bugi_pdk/: Cargo.toml
bugi/crates/bugi_pdk/src/: lib.rs
bugi/crates/bugi_pdk_derive/: Cargo.toml
bugi/crates/bugi_sdk/: Cargo.toml
bugi/crates/bugi_sdk/src/: cacher.rs  hostfunc.rs  lib.rs  module.rs  spec_type.rs  universe.rs
bugi/docs/: spec-wasm-v0.md
bugi/example/simple-pdk/: Cargo.toml
bugi/example/simple-pdk/.cargo/: config.toml
bugi/example/simple-pdk/src/: plug.rs
bugi/example/simple-sdk/: Cargo.toml  README.md  copy_pdk.ts
bugi/example/simple-sdk/src/: main.rs  runtime.rs
bugi/example/simple_pdk/: Cargo.toml
bugi/example/simple_pdk/src/: lib.rs
bugi/tests/: README.md  add_test.ts  build_pdk.ts
bugi/tests/t-pdk/: Cargo.toml
bugi/tests/t-pdk/src/: t_1_empty.rs  t_2_return.rs  t_3_get_args.rs  t_4_custom_type.rs
bugi/tests/t-sdk/: Cargo.toml
bugi/tests/t-sdk/src/: lib.rs
bugic/crates/bugic/: Cargo.toml
bugic/crates/bugic-core/: Cargo.toml
bugic/crates/bugic-core/src/: lib.rs
bugic/crates/bugic-host/: Cargo.toml
bugic/crates/bugic-host/src/: lib.rs
bugic/crates/bugic-share/: Cargo.toml
bugic/crates/bugic-share/src/: lib.rs
bugic/crates/bugic-tests/: Cargo.toml
bugic/crates/bugic-tests/src/: lib.rs
bugic/crates/bugic/benches/: m.rs
bugic/crates/bugic/src/: cacher.rs  host_plug.rs  lib.rs  plugin.rs
bugic/crates/bugic/tests/: hello.rs
docs/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs
