[workspace]
members = [
    # bugi
    # "bugi/crates/*",
    "bugic/crates/*",

    # examples
    # "bugi/example/*",

    # tests
    # "bugi/tests/*",
]
resolver = "1"

[workspace.dependencies]
# General
anyhow = { version = "1.0.89" }
thiserror = { version = "1.0.64" }
rand = { version = "0.8.5", features = ["small_rng"] }

# Seliarize
rmpv = { version = "1.3.0" }
rmp-serde = { version = "1.3.0" }
serde = { version = "1.0.210", features = ["derive"] }
bitcode = "0.6.3" 

# macro
proc-macro2 = { version = "1.0.86" }
syn = { version = "2.0.79", features = ["full"] }
quote = { version = "1.0.37" }

# for dev
criterion = { version = "0.5", features = ["html_reports"] }

# Workspace Crates

# bugi

# bugi-cli = { path = "bugi/crates/bugi-cli" } # cli for check plugin

# bugi-pdk = { path = "bugi/crates/bugi-pdk" } # pdk
# bugi-pdk-derive = { path = "bugi/crates/bugi-pdk-derive" } # macro def for pdk

# bugi-sdk = { path = "bugi/crates/bugi-sdk" } # sdk

# bugi-macro = { path = "bugi/crates/bugi-macro" } # macro for pdk

# bugic
bugic-share = { path = "bugic/crates/bugic-share" } # share
bugic = { path = "bugic/crates/bugic" } # sdk

