[workspace]
members = [
    "bugic/crates/*",
]
resolver = "1"

[workspace.dependencies]
# General
anyhow = { version = "1.0.89" }
thiserror = { version = "1.0.64" }
rand = { version = "0.8.5", features = ["small_rng"] }

# Seliarize
rmpv = { version = "1.3.0" }
rmp-serde = { version = "1.3.0" }
serde = { version = "1.0.210", features = ["derive"] }
bitcode = "0.6.3"

# macro
proc-macro2 = { version = "1.0.87" }
syn = { version = "2.0.79", features = ["full"] }
quote = { version = "1.0.37" }
