[package]
name = "bugi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true

bugi-share = { path = "../bugi-share" }
bugi-core = { path = "../bugi-core" }
bugi-host = { path = "../bugi-host", optional = true }
bugi-wasm = { path = "../bugi-wasm", optional = true }

[features]
default = ["plug-host", "ser-rmp"]
plug-wasm = ["bugi-wasm"]
plug-host = ["bugi-host"]
ser-rmp = ["bugi-share/ser-rmp"]
ser-bitcode = ["bugi-share/ser-bitcode"]
