[package]
name = "t-pdk"
version = "0.1.0"
edition = "2021"

[dependencies]
# Seliarize
serde.workspace = true

bugi-pdk.workspace = true

[[example]]
name = "t_1_empty"
path = "src/t_1_empty.rs"
crate-type = ["cdylib"]

[[example]]
name = "t_2_return"
path = "src/t_2_return.rs"
crate-type = ["cdylib"]

[[example]]
name = "t_3_get_args"
path = "src/t_3_get_args.rs"
crate-type = ["cdylib"]

[[example]]
name = "t_4_custom_type"
path = "src/t_4_custom_type.rs"
crate-type = ["cdylib"]

