[package]
name = "bugic"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmer = { version = "4.3.7", optional = true }
anyhow.workspace = true
thiserror.workspace = true
bugic-share.workspace = true
bugic-core.workspace = true
bugic-host.workspace = true

[features]
default = ["plug-host", "ser-rmp"]
plug-wasm = ["wasmer"]
plug-host = []
ser-rmp = ["bugic-share/ser-rmp"]
ser-bitcode = ["bugic-share/ser-bitcode"]